[gd_scene load_steps=9 format=3 uid="uid://ln242phoaht0"]

[ext_resource type="Script" uid="uid://ca56mqolesmic" path="res://Scripts/Nachos/nacho_ninja.gd" id="1_5jd2a"]
[ext_resource type="Texture2D" uid="uid://d34xpy503onqj" path="res://Assets/cuttingboard.png" id="1_dv62o"]
[ext_resource type="PackedScene" uid="uid://gk1lglu6jxso" path="res://Scenes/timer.tscn" id="2_5jd2a"]
[ext_resource type="PackedScene" uid="uid://e1ltjveae1v3" path="res://Scenes/Nachos/fruits/fruit.tscn" id="2_gpstr"]
[ext_resource type="PackedScene" uid="uid://dpdklfsahjt5y" path="res://Scenes/Nachos/fruits/tomato.tscn" id="3_2275h"]
[ext_resource type="PackedScene" uid="uid://c4vvp041fukdh" path="res://Scenes/Nachos/fruits/onion.tscn" id="4_5sau1"]
[ext_resource type="Script" uid="uid://dr7tspik63st7" path="res://Scripts/Nachos/blade.gd" id="5_6wskc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2275h"]
size = Vector2(640, 20)

[node name="NachoNinja" type="Node2D"]
script = ExtResource("1_5jd2a")
fruit_scenes = Array[PackedScene]([ExtResource("2_gpstr"), ExtResource("3_2275h"), ExtResource("4_5sau1")])
throwForce = 750
fruitsAtTime = 2

[node name="Cuttingboard" type="Sprite2D" parent="."]
position = Vector2(455, 227)
scale = Vector2(1.16518, 1.12522)
texture = ExtResource("1_dv62o")

[node name="Timer" parent="." instance=ExtResource("2_5jd2a")]

[node name="background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 359.0
color = Color(0.376471, 0.376471, 0.376471, 0.733333)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = 328.0
offset_top = 190.0
offset_right = 368.0
offset_bottom = 230.0

[node name="Blade" type="Node2D" parent="."]
light_mask = 2
script = ExtResource("5_6wskc")

[node name="Line2D" type="Line2D" parent="Blade"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(316, 520)
shape = SubResource("RectangleShape2D_2275h")

[connection signal="time_done" from="Timer" to="." method="_on_timer_time_done"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_shape_entered" from="Area2D" to="." method="_on_area_2d_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
